--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 
 <body>
   
+<div id="sky"></div>
+
   <!-- 
       1. Install jQlouds plugin
         - Direct Download of Plugin: https://raw.githubusercontent.com/enricodeleo/jqlouds/master/dist/jquery.jqlouds.min.js
@@ -32,7 +34,10 @@
   
   <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.js"></script>
   <script src="js/semantic.min.js"></script>
+  <script src="js/jqlouds.js"></script>
   <script src="js/scripts.js"></script>
 
 </body>
 </html>
+
+
